--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ main {
 }
 
 .input.error::before {
-  content: 'Can\'t be zero or less';
+  content: 'Can\'t be zero';
   position: absolute;
   right: 0;
   top: -22px;
@@ -125,6 +125,7 @@ input::-webkit-inner-spin-button {
   border-radius: 5px;
   font-weight: 700;
   cursor: pointer;
+  font-size: 23px;
 }
 
 .tips .buttons button.active, .tips .buttons button:hover {
@@ -215,9 +216,17 @@ input::-webkit-inner-spin-button {
     margin: auto;
   }
   .wrapUp {
-    max-height: -webkit-max-content;
-    max-height: -moz-max-content;
-    max-height: max-content;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    height: 200px;
   }
 }
 /*# sourceMappingURL=style.css.map */
